--- a/app/src/main/res/layout-land/activity_external_links.xml
+++ b/app/src/main/res/layout-land/activity_external_links.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
@@ -14,6 +14,8 @@
         android:paddingTop="10dp"
         android:orientation="vertical"
         android:background="@color/white"
+
+
         tools:context="ie.iskill.collaborationexample.eric.EricActivity">
         <ImageView
             android:layout_width="match_parent"
@@ -28,15 +30,6 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             >
-            <!--Tomas added textview-->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="@string/external_links_main_scr"
-                android:textSize="30sp"
-                android:id="@+id/who_can_help_title_page"
-                />
 
         </LinearLayout>
 
@@ -47,28 +40,41 @@
             android:background="#000000" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal">
+            android:background="@color/grey"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
 
             <LinearLayout
+                android:layout_marginTop="10dp"
+                android:paddingTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:paddingBottom="5dp"
                 >
 
+
+
                 <ImageView
-                    android:padding="15dp"
+                    android:padding="20dp"
                     android:adjustViewBounds="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/citizen1"
+
                     android:onClick="FormActivity6"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="1"/>
+
 
                 <ImageView
                     android:autoLink="web"
-                    android:padding="10dp"
+                    android:padding="20dp"
                     android:adjustViewBounds="true"
                     android:onClick="sendContact"
                     android:layout_weight="1"
@@ -78,14 +84,19 @@
                     android:layout_marginRight="10dp"
                     android:src="@drawable/ic_mail_outline_black_24dp"
                     android:id="@+id/email_charity_6"
+
+
                     />
+
 
             </LinearLayout>
             <LinearLayout
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
+
                 >
                 <TextView
                     android:autoLink="web"
@@ -93,9 +104,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/charity6"
-                    android:textColorLink="@color/logo_red"
+                    android:textColor="@color/black"
                     android:gravity="right"
-                    android:textSize="25dp"
+                    android:textSize="28dp"
                     android:id="@+id/link6"/>
 
                 <TextView
@@ -120,9 +131,12 @@
 
         <LinearLayout
             android:background="@color/grey"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
 
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -133,16 +147,20 @@
                 android:paddingBottom="5dp"
                 >
 
+
+
                 <ImageView
                     android:padding="20dp"
                     android:adjustViewBounds="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/justice1"
+
                     android:onClick="FormActivity5"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"/>
+
 
                 <ImageView
                     android:autoLink="web"
@@ -156,14 +174,19 @@
                     android:layout_marginRight="10dp"
                     android:src="@drawable/ic_mail_outline_black_24dp"
                     android:id="@+id/email_charity_5"
+
+
                     />
+
 
             </LinearLayout>
             <LinearLayout
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
+
                 >
                 <TextView
                     android:autoLink="web"
@@ -188,17 +211,22 @@
             </LinearLayout>
         </LinearLayout>
 
+
+
         <!--template-->
         <View
             android:layout_width="fill_parent"
             android:layout_height="2dp"
             android:background="#000000" />
+
         <LinearLayout
             android:background="@color/grey"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
+
 
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -209,16 +237,20 @@
                 android:paddingBottom="5dp"
                 >
 
+
+
                 <ImageView
                     android:padding="20dp"
                     android:adjustViewBounds="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/carafterprison"
+
                     android:onClick="FormActivity1"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"/>
+
 
                 <ImageView
                     android:autoLink="web"
@@ -232,14 +264,19 @@
                     android:layout_marginRight="10dp"
                     android:src="@drawable/ic_mail_outline_black_24dp"
                     android:id="@+id/email_charity_3"
+
+
                     />
+
 
             </LinearLayout>
             <LinearLayout
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
+
                 >
                 <TextView
                     android:autoLink="web"
@@ -272,10 +309,14 @@
 
         <LinearLayout
             android:background="@color/grey"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
+
+
+
 
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -285,6 +326,8 @@
                 android:layout_marginBottom="10dp"
                 android:paddingBottom="5dp"
                 >
+
+
 
                 <ImageView
                     android:padding="20dp"
@@ -296,6 +339,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"/>
+
 
                 <ImageView
                     android:autoLink="web"
@@ -309,15 +353,20 @@
                     android:layout_marginRight="10dp"
                     android:src="@drawable/ic_mail_outline_black_24dp"
                     android:id="@+id/email_charity_2"
+
+
                     />
+
 
             </LinearLayout>
 
             <LinearLayout
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
+
                 >
                 <TextView
                     android:autoLink="web"
@@ -350,10 +399,12 @@
 
         <LinearLayout
             android:background="@color/grey"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
+
 
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -363,6 +414,8 @@
                 android:layout_marginBottom="10dp"
                 android:paddingBottom="5dp"
                 >
+
+
 
                 <ImageView
                     android:padding="20dp"
@@ -374,6 +427,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"/>
+
 
                 <ImageView
                     android:autoLink="web"
@@ -387,7 +441,10 @@
                     android:layout_marginRight="10dp"
                     android:src="@drawable/ic_mail_outline_black_24dp"
                     android:id="@+id/email_charity_4"
+
+
                     />
+
 
             </LinearLayout>
             <LinearLayout
@@ -396,6 +453,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
+
                 >
                 <TextView
                     android:autoLink="web"
@@ -428,9 +486,12 @@
 
         <LinearLayout
             android:background="@color/grey"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
 
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -440,6 +501,8 @@
                 android:layout_marginBottom="10dp"
                 android:paddingBottom="5dp"
                 >
+
+
 
                 <ImageView
                     android:padding="20dp"
@@ -451,6 +514,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1"/>
+
 
                 <ImageView
                     android:autoLink="web"
@@ -464,15 +528,20 @@
                     android:layout_marginRight="10dp"
                     android:src="@drawable/ic_mail_outline_black_24dp"
                     android:id="@+id/email_charity_1"
+
+
                     />
+
 
             </LinearLayout>
 
             <LinearLayout
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="center"
+
                 >
                 <TextView
                     android:autoLink="web"
@@ -496,5 +565,11 @@
                     android:layout_marginBottom="10dp"/>
             </LinearLayout>
         </LinearLayout>
+
+
+
+
+
+
     </LinearLayout>
 </ScrollView>
